tests/data/mini_script/valid/control_flow.ms
let count = 3;
let enabled = true;

while count > 0 {
    print count;
    count = count - 1;
}

if enabled {
    print 1;
} else {
    print 0;
}
