tests/data/mini_script/invalid/hard_unknown_statements.ms
let ok = 1;
return ok;
@bad token stream;
print ok
while ok > 0 {
    ok = ok - ;
}
